# capstone

./: .env.example  README.md  constants.py  environment.py  experiment.py  llm.py  metrics.py  process_experiment.py  process_experiment_configs.py  pyproject.toml  report_nli_metric.aux  report_nli_metric.out  report_nli_metric.tex  requirements.txt  run.sh  run_all_stats.py  runtime_config.py  statistical_analysis.py  statistical_tests.py  stats_results.json  timestep
configs/: configs.yaml
experiments/baseline_self/run_0001/: experiment.json  metadata.json
experiments/baseline_self/run_0002/: experiment.json  metadata.json
experiments/baseline_self/run_0003/: experiment.json  metadata.json
experiments/baseline_self/run_0004/: experiment.json  metadata.json
experiments/baseline_self/run_0005/: experiment.json  metadata.json
experiments/baseline_self/run_0006/: experiment.json  metadata.json
experiments/baseline_self/run_0007/: experiment.json  metadata.json
experiments/baseline_self/run_0008/: experiment.json  metadata.json
experiments/baseline_self/run_0009/: experiment.json  metadata.json
experiments/baseline_self/run_0010/: experiment.json  metadata.json
experiments/baseline_self/run_0011/: experiment.json  metadata.json
experiments/baseline_self/run_0012/: experiment.json  metadata.json
experiments/baseline_social/run_0001/: experiment.json  metadata.json
experiments/baseline_social/run_0002/: experiment.json  metadata.json
hpc/: setup_env.sh  submit_experiment.slurm
metric_testing/: test.py  test_semscore.ipynb  tests.ipynb
(+482 files in other folders)
